crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__indentation_with_windows_eol.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: indentation_with_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        Def,
        0..3,
    ),
    (
        Name(
            "foo",
        ),
        4..7,
    ),
    (
        Lpar,
        7..8,
    ),
    (
        Rpar,
        8..9,
    ),
    (
        Colon,
        9..10,
    ),
    (
        Newline,
        10..12,
    ),
    (
        Indent,
        12..16,
    ),
    (
        Return,
        16..22,
    ),
    (
        Int(
            99,
        ),
        23..25,
    ),
    (
        Newline,
        25..27,
    ),
    (
        NonLogicalNewline,
        27..29,
    ),
    (
        Dedent,
        29..29,
    ),
]
```
