crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__invalid_leading_zero_big.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: "lex_invalid(source, Mode::Module)"
---
## Tokens
```
[
    (
        Unknown,
        0..85,
    ),
    (
        Newline,
        85..85,
    ),
]
```
## Errors
```
[
    LexicalError {
        error: OtherError(
            "Invalid decimal integer literal",
        ),
        location: 0..85,
    },
]
```
