crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__ipython_escape_command_indentation.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_jupyter_source(source)
---
## Tokens
```
[
    (
        If,
        0..2,
    ),
    (
        True,
        3..7,
    ),
    (
        Colon,
        7..8,
    ),
    (
        Newline,
        8..9,
    ),
    (
        Indent,
        9..13,
    ),
    (
        IpyEscapeCommand {
            value: "matplotlib         --inline",
            kind: Magic,
        },
        13..43,
    ),
    (
        Newline,
        43..43,
    ),
    (
        Dedent,
        43..43,
    ),
]
```
